Correcion de version de archivo

--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -36,3 +36,9 @@ jobs:
       with:
         name: coverage-report
         path: htmlcov/
+
+    - name: Verificar app corriendo
+      run: |
+        timeout 10 python app.py &
+        sleep 5
+        curl -f http://localhost:5000/health
