--- a/.github/workflows/ci-python.yml
+++ b/.github/workflows/ci-python.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: Ejecutar con cobertura
       run: |
+        export PYTHONPATH=$PYTHONPATH:$(pwd)
         pytest --cov=mi_app --cov-report=term --cov-report=html
 
     - name: Guardar reporte
